Add Medicine Warehouse API methods
